kubernetes/userservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels: 
        app: webapi
    spec:
      containers:
      - name: webapi
        image: danialaswad/user-service:1.0.1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: user-service
spec: 
  selector:
    app: webapi
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
