kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: userservice-ingress
  namespace: userservice
spec:
  tls:
  - secretName: tls-secret
  rules:
  - http:
      paths: 
        - backend:
            serviceName: user-service
            servicePort: 8081
          path: /
